--- a/css/Index.css
+++ b/css/Index.css
@@ -14,10 +14,17 @@
 }
 
 html {
-    --body-background: #EEF9BF;
-    --card-color: #A7E9AF;
-    --border-color: #99CEA8;
-    --text-color: #75B79E;
+    --body-background: #E5E5E5;
+    --status-message: #DCDCDC;
+    --reserved-message: #FFDEDE;
+    --text-color: #000000;
+    --input-login: #D7D7D7;
+    --button-login: #E7E7E7;
+    --button-login-text: #696969;
+    --Place-holder-login: #AEAEAE;
+    --grey: #AAAAAA;
+    --soft-black: #505050;
+    --white: #FFFFFF;
     font-size: 62.5%;
 }
 
@@ -31,24 +38,163 @@ a{
 }
 
 body{
-
+    height: 100%;
+    position: relative;
     font-family: 'Roboto', sans-serif;
     font-size: clamp(14px, 1.6rem, 2vw);
-
     background: var(--body-background);
+}
+
+.Hide{
+    display: none !important;
 }
 
 /* TELA DE LOGIN */
 
+#Login{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 9.5rem;
+    background: var(--white);
+    position: absolute;
+    z-index: 10;
+}
 
+#Login img{
+    width: 13rem;
+    height: 9rem;
+    border-bottom: 2px solid var(--white);
+    margin-top: -10rem;
+}
+
+#Login #Login-input{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+#Login input{
+    width: 26rem;
+    height: 5.5rem;
+    border: 1px solid var(--input-login);
+    border-radius: 4px;
+    text-align: center;
+    font-size: 18px;
+}
+
+#Login input::placeholder{
+    font-weight: 400;
+    font-size: 18px;
+}
+
+#Login button{
+    width: 10.9rem;
+    height: 4.5rem;
+    background: var(--button-login);
+    border-radius: 9px;
+    border: none;
+    color: var(--button-login-text);
+    font-weight: 400;
+    font-size: 18px;
+}
 
 /* CABEÇALHO */
 
 header{
+    background: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.6rem 2.1rem;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
+}
 
+header img:nth-child(1){
+    width: 7.5rem;
+    height: 5.3rem;
+    border-bottom: 2px solid var(--white);
+}
+
+header img:nth-child(2){
+    width: 4.5rem;
 }
 
 /* LAYOUT DAS CONVERSAS */
 
 main{
+    padding-top: 2.6rem;
+    display: flex;
+    flex-direction: column;
+    gap: .4rem;
+}
+
+.Message{
+    width: 100%;
+    min-height: 4rem;
+    padding: 1rem .9rem;
+    display: flex;
+    align-items: center;
+    color: var(--text-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.65rem;
+    background: white;
+}
+
+.Status.Message{
+    background: var(--status-message);
+}
+
+.Reserved.Message{
+    background: var(--reserved-message);
+}
+
+.Message time{
+    color: var(--grey);
+}
+
+.Message strong{
+    font-weight: 700;
+}
+
+/* ÁREA DE TEXTO DO USUÁRIO */
+
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 8rem;
+    background: var(--white);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2.5rem 1.7rem;
+    gap: 1.35rem;
+}
+
+footer textarea{
+    width: 100%;
+    font-size: 18px;
+    font-weight: 400;
+    padding-top: 1rem;
+    line-height: 1.9rem;
+    border: none;
+    font-family: 'Roboto', sans-serif;
+    align-items: center;
+}
+
+footer textarea::placeholder{
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--text-color);
+}
+
+footer img{
+    width: 2.6rem;
 }
