--- a/css/Index.css
+++ b/css/Index.css
@@ -198,3 +198,78 @@ footer textarea::placeholder{
 footer img{
     width: 2.6rem;
 }
+
+/* MENU DE MENSAGENS DIRETAS */
+
+#Menu{
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: right;
+}
+
+nav{
+    height: 100vh;
+    width: 70%;
+    background: var(--white);
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 3rem 1.65rem;
+}
+
+nav h3{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.8rem;
+    text-align: center;
+}
+
+nav ul{
+    margin: 1rem 0rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+nav ul li, 
+#Public, 
+#Reserved{
+    display: flex;
+    width: 100%;
+    font-size: 16px;
+    line-height: 19px;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+}
+
+nav ul li div,
+#Public div,
+#Reserved div{
+    display: flex;
+    align-items: center;
+    gap: .7rem;
+}
+
+#Public div p,
+#Reserved div p{
+    margin-top: 1rem;
+}
+
+nav ul li div > img,
+#Public div > img,
+#Reserved div > img{
+    width: 2.5rem;
+}
+
+nav ul li > img,
+#Public > img,
+#Reserved > img{
+    width: 1.1rem;
+    height: .9rem;
+}
