--- a/css/Index.css
+++ b/css/Index.css
@@ -54,7 +54,7 @@ body{
 
 #Login{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,6 +63,7 @@ body{
     background: var(--white);
     position: absolute;
     z-index: 10;
+    top: -12%;
 }
 
 #Login img{
