--- a/css/Index.css
+++ b/css/Index.css
@@ -54,7 +54,7 @@ body{
 
 #Login{
     width: 100%;
-    height: 110vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,7 +63,6 @@ body{
     background: var(--white);
     position: absolute;
     z-index: 10;
-    top: -12%;
 }
 
 #Login img{
@@ -138,7 +137,8 @@ header img:nth-child(2){
 /* LAYOUT DAS CONVERSAS */
 
 main{
-    margin-top: 20%;
+    position: fixed;
+    margin-top: 19.5%;
     width: 100%;
     height: 77.5%;
     padding-top: 2.6rem;
